--- a/DOM/ex1.html
+++ b/DOM/ex1.html
@@ -5,9 +5,10 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Document</title>
-
 </head>
 <body>
-    <script src="calcularServico.js"></script>
+    <h1 id="titulo">DOM :-) </h1>
+    
 </body>
+<script src="ex1.js"></script>
 </html>
