--- a/DOM/exercicio1.html
+++ b/DOM/exercicio1.html
@@ -6,6 +6,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>DOM</title>
 </head>
+    Inicio da  aprendizado sobre o Dom
 <body>
     <h1 id="titulo">DOM</h1>
 </body>
